# kuikjulia.trunk

./: .gitignore  CMakeLists.txt  cleaner.sh  make.sh  readme.md  readme.txt
glade/: kuikjulia.glade  pallet_master.glade  pallet_parallel.glade  pallet_read_data.glade  pallet_write_data.glade  script_editor.glade  vte_window.glade
include/: kuikjulia_window.h  pallet_defines.h.in  pallet_structures.c  pallet_structures.h  pallet_wr_data_structures.c
lib/: CMakeLists.txt
lib/Essentials/: pallet_Essentials.c  pallet_Essentials_function01.c
lib/Filesystem/: pallet_Filesystem.c  pallet_Filesystem_function05.c
lib/parallel/: CMakeLists.txt  pallet_parallel.c  pallet_parallel_function01.c  pallet_parallel_function02.c  pallet_parallel_function04.c
lib/quick/: CMakeLists.txt  pallet_quick.c
lib/read_data/: pallet_read_data.c  pallet_read_data_function01.c  pallet_read_data_function02.c  pallet_read_data_function03.c  pallet_read_data_function04.c  pallet_read_data_function05.c
lib/write_data/: pallet_write_data.c  pallet_write_data_function01.c  pallet_write_data_function01_mem.c  pallet_write_data_function02.c  pallet_write_data_function03.c
misc/: CMakeLists.txt  kuikjulia.desktop.in
src/: kuikjulia_func.c
src/editor/: script_editor.c  script_editor_file_open.c
src/vte/: vte_enviroment.c
